--- a/views/coach.ejs
+++ b/views/coach.ejs
@@ -54,7 +54,7 @@ Use pop-ups for statistician options so that auto-backup doesn't need restarting
                     School:&nbsp;
                     <input type="text" placeholder="Enter school name" form="editTeam" name="coachSchool" 
                         value="<%=coachSchool%>" required />
-                    <button type="submit" form="editTeam" name="requestType" value="submitTeam" class="submitButton" id="click-on-enter">
+                    <button type="submit" form="editTeam" name="requestType" value="submitTeam" id="click-on-enter">
                         Save Changes
                     </button>
                     <button type="submit" form="mainForm" name="requestType" value="readOnly">
@@ -109,8 +109,8 @@ Use pop-ups for statistician options so that auto-backup doesn't need restarting
                 if(state=="enterNames" ){%>
                     <div class="oleftbutton">
                         <button type="submit" form="namesForm" 
-                                    name="requestType" value="submitNames" class="submitButton">
-                            Submit Names
+                                    name="requestType" value="submitNames">
+                            Save Changes
                         </button>
                         <button type="submit" form="mainForm" name="requestType" value="readOnly">
                             Cancel
@@ -127,8 +127,8 @@ Use pop-ups for statistician options so that auto-backup doesn't need restarting
             <%if(state=="enterScores"){%>
                 <div class="omiddlebutton">
                     <button type="submit" form="scoresForm" 
-                                name="requestType" value="submitScores" class="submitButton">
-                        Submit Scores
+                                name="requestType" value="submitScores">
+                        Save Changes
                     </button>
                     <button type="submit" form="mainForm" 
                                 name="requestType" value="readOnly">
@@ -336,12 +336,14 @@ Use pop-ups for statistician options so that auto-backup doesn't need restarting
                 window.onload = function() {alert("Score entry is currently locked")};
             </script>
         <%}%>
-        <script>
-            document.querySelector('#txtSearch').addEventListener('keydown', function (e) {
-                if (e.key === 'Enter') {
-                    document.getElementById("click-on-enter").click();
-                }
-            });
-        </script>
+        <%if (editTeam) {%>
+            <script>
+                document.addEventListener('keydown', function (e) {
+                    if (e.key === 'Enter') {
+                        document.getElementById("click-on-enter").click();
+                    }
+                });
+            </script>
+        <%}%>
     </body>
 </html>
