--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
             );</script>
     <%}%>
     <script>
-        document.querySelector('#txtSearch').addEventListener('keydown', function (e) {
+        document.addEventListener('keydown', function (e) {
             if (e.key === 'Enter') {
                 document.getElementById("click-on-enter").click();
             }
