--- a/public/coach.css
+++ b/public/coach.css
@@ -65,7 +65,7 @@ h2 {
     position: relative;
     width: 95%;
     max-width: 21.5cm;
-    min-height: 100px;
+    min-height: 50px;
     margin: auto;
 }
 
@@ -100,10 +100,10 @@ button {
     touch-action: manipulation;
 }
 
-.submitButton {
+/* .submitButton {
     font-size: 24pt;
 }
-
+ */
 button:disabled {
     opacity: 0.5;
 }
@@ -375,6 +375,10 @@ table {
     border-collapse: collapse;
     border: 2px solid black;
     letter-spacing: 0px;
+}
+
+.highLighted {
+    border: 4px solid #3e59ff;
 }
 
 /* caption {
