--- a/views/changePwd.ejs
+++ b/views/changePwd.ejs
@@ -45,7 +45,7 @@
         </button>
     </form>
     <script>
-        document.querySelector('#txtSearch').addEventListener('keydown', function (e) {
+        document.addEventListener('keydown', function (e) {
             if (e.key === 'Enter') {
                 document.getElementById("click-on-enter").click();
             }
